--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
+    "react-axios": "^2.0.5",
     "react-bootstrap": "^1.6.0",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -19,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server -p3002 --watch items.json"
   },
   "eslintConfig": {
     "extends": [
