--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.6.0",
     "json-server": "^0.16.3",
     "node-sass": "^6.0.0",
+    "postgres": "^1.0.2",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
     "react-bootstrap": "^1.6.0",
