--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@ node_modules
 /node_modules
 /.pnp
 .pnp.js
-src/Main/BeachTemp
-scr/Main/Beaches.js
-scr/Main/BeachTemperature.css
-scr/Main/BeachTemperatureCard.js
-scr/Main/WeatherCard.js
+dir_to_ignore/src/Main/BeachTemp
+dir_to_ignore/scr/Main/Beaches.js
+dir_to_ignore/scr/Main/BeachTemperature.css
+dir_to_ignore/scr/Main/BeachTemperatureCard.js
+dir_to_ignore/scr/Main/WeatherCard.js
 
 # testing
 /coverage
